Grabbing triggers on the cool element, background and Nav

--- a/index.html
+++ b/index.html
@@ -220,6 +220,13 @@
 </style>
 
 <script>
+    // gets all the direct decendents of the cool item
+    const triggers = document.querySelectorAll('.cool > li');
+    // get the background
+    const background = document.querySelector('.dropdownBackground');
+    // get the Nav
+    const nav = document.querySelector('.top');
+
 </script>
 
 </body>
