--- a/index.html
+++ b/index.html
@@ -227,10 +227,14 @@
     // get the Nav
     const nav = document.querySelector('.top');
 
-    // trigger CSS to show content on enter
+    // trigger CSS to show content on enter (only if trigger-enter is there)
     function handleEnter() {
         this.classList.add('trigger-enter');
-        setTimeout(() => this.classList.add('trigger-enter-active'), 150);
+        setTimeout(() => {
+            if(this.classList.contains('trigger-enter')) {
+                this.classList.add('trigger-enter-active')
+            }
+        }, 150);
         background.classList.add('open');
 
         // finds the position of the nav on the page
@@ -242,12 +246,15 @@
         const coords = {
             height: dropdownCoords.height,
             width: dropdownCoords.width,
+            // has the - navCoords to allow for space on the top if there
+            top: dropdownCoords.top - navCoords.top,
+            left: dropdownCoords.left - navCoords.left
         };
 
     // Creates background box with different sizes
     background.style.setProperty('width', `${coords.width}px`);
     background.style.setProperty('height', `${coords.height}px`);
-
+    background.style.setProperty('transform', `translate(${coords.left}px, ${coords.top}px)`);
     }
 
     // trigger CSS to remove content on leave
